--- a/frnlencastore/src/componentes/Footer/Footer.css
+++ b/frnlencastore/src/componentes/Footer/Footer.css
@@ -23,6 +23,7 @@ nav ul li {
   text-align: center;
   justify-content: center;
   align-items: center;
+  width:100%;
 }
 nav ul li a {
   display: flex;
